# gamengen-atari

./: README.md  pyproject.toml  ruff.toml
scripts/: make_vid_from_parquet.py  prepare_gamengen_dataset.py
src/gamengen/: dataset.py  finetune_latent_decoder.py  pipeline.py  train.py
src/gamengen_atari/: dataset.py  finetune_latent_decoder.py  models.py  pipeline.py  train.py
